# growl-for-linux

./: Makefile.am  configure.ac  gol.c
debian/: changelog  control  copyright  growl-for-linux.lintian-overrides  rules  source.lintian-overrides  watch
debian/patches/: add-missing-desktop-keyword.patch  add-pie-flags-for-gol.patch  disable-display-execstack.patch  drop-removed-growl4linuxjpg.patch  enable-noexecstack  enable-pie-for-gol.patch  fix-a-typo-about-recieved.patch  fix-typo-about-faild.patch  series
display/balloon/: Makefile.am  balloon.c
display/fog/: Makefile.am  fog.c
display/libnotify/: Makefile.am
display/nico2/: Makefile.am  nico2.c
upstream/: metadata
